list filters for sports objects
