# gen/pb/sports_objects.pb.validate.go
@@ -183,24 +183,30 @@ func (m *SportsObjects_ListRequest) Validate() error {
 		}
 	}
 
-	if m.GetObjectName() != "" {
+	for idx, item := range m.GetObjectNames() {
+		_, _ = idx, item
 
-	}
+		if item != "" {
 
-	if m.GetDepartmentalOrganizationId() != 0 {
-
-		if m.GetDepartmentalOrganizationId() < 100000 {
-			return SportsObjects_ListRequestValidationError{
-				field:  "DepartmentalOrganizationId",
-				reason: "value must be greater than or equal to 100000",
-			}
 		}
 
 	}
 
-	// no validation rules for DepartmentalOrganizationName
+	for idx, item := range m.GetDepartmentalOrganizationIds() {
+		_, _ = idx, item
 
-	// no validation rules for Availability
+		if item != 0 {
+
+			if item < 100000 {
+				return SportsObjects_ListRequestValidationError{
+					field:  fmt.Sprintf("DepartmentalOrganizationIds[%v]", idx),
+					reason: "value must be greater than or equal to 100000",
+				}
+			}
+
+		}
+
+	}
 
 	return nil
 }
