# gen/swagger/api.swagger.json
@@ -582,38 +582,53 @@
             "format": "int64"
           },
           {
-            "name": "objectName",
+            "name": "objectNames",
             "description": "filters.",
             "in": "query",
             "required": false,
-            "type": "string"
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "collectionFormat": "multi"
           },
           {
-            "name": "departmentalOrganizationId",
+            "name": "departmentalOrganizationIds",
             "in": "query",
             "required": false,
-            "type": "integer",
-            "format": "int64"
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "collectionFormat": "multi"
           },
           {
-            "name": "departmentalOrganizationName",
+            "name": "departmentalOrganizationNames",
             "in": "query",
             "required": false,
-            "type": "string"
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "collectionFormat": "multi"
           },
           {
-            "name": "availability",
+            "name": "availabilities",
             "in": "query",
             "required": false,
-            "type": "string",
-            "enum": [
-              "UNKNOWN",
-              "CITY",
-              "REGION",
-              "DISTRICT",
-              "STEP"
-            ],
-            "default": "UNKNOWN"
+            "type": "array",
+            "items": {
+              "type": "string",
+              "enum": [
+                "UNKNOWN",
+                "CITY",
+                "REGION",
+                "DISTRICT",
+                "STEP"
+              ]
+            },
+            "collectionFormat": "multi"
           }
         ],
         "tags": [
